[package]
name = "oauth2"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Florin Lipan <florinlipan@gmail.com>", "David A. Ramos <ramos@cs.stanford.edu>"]
version = "4.0.0-alpha.1"
license = "MIT/Apache-2.0"
description = "An extensible, strongly-typed implementation of OAuth2"
repository = "https://github.com/ramosbugs/oauth2-rs"
edition = "2018"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
base64 = "0.12"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
http-types = "2.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
unicode-normalization = "0.1"
url = "2.1"

[dev-dependencies]
hex = "=0.4.0"
rust-crypto = "0.2.36"
smol = "0.1"
http-client = "3.0"
uuid = { version = "0.8.1", features = ["v4"] }
